# perceptual-drift

./: .gitignore  Dockerfile.starter  LICENSE  README.md  benchmark.py  benchmark2.py  benchmark3.py  pyproject.toml  requirements-dev.txt  requirements-starter.txt
.github/workflows/: ci.yml
config/: mapping.yaml  platform_desktop.yaml  platform_jetson_orin_nano.yaml  platform_pi.yaml  video-presets.json
config/mappings/: midi.yaml  osc.yaml
config/recipes/: afterburner_chase.yaml  agitated.yaml  ambient.yaml  consent_signal.yaml  midnight_meditation.yaml  (+3 more)
constraints/: py310-linux.txt
docs/: ASSUMPTION_LEDGER.md  PRIVACY_ETHICS.md  ROADMAP.md  architecture.md  control-stack-playbook.md  dependency-matrix.md  environment-reproducibility.md  index.md  jetson_scene_01.md  mapping-contract.md  platform-lab.md  quickstart.md  recipes.md  starter-bundle.md  swarm-quickstart.md  testing.md  video-pipeline.md
examples/: jetson_hello_camera.py
hardware/: README.md  jetson_orin_nano.md
notes/: jetson_field_notes.md  lap_field_notes.md
scripts/: check_sensors.py  check_stack.py  export_env_manifest.sh  log_event.py  obs_telemetry_overlay.py  profile_pipeline.py  purge_buffers.sh  record_fpv.sh  seal_logs.sh  setup_jetson.sh  setup_pi.sh  starter_doctor.sh  starter_up.sh  validate_config.py
software/: __init__.py
tests/: test_check_stack.py  test_consent_invariants.py  test_operator_ui_server.py  test_operator_ui_state.py  test_operator_ui_supervisor.py  test_osc_msp_bridge_refactor.py  test_safe_rehearsal.py  test_swarm_hardening.py  test_validate_config.py
(+60 files in other folders)
