[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptual-drift"
version = "0.1.0"
description = "Audience-controlled FPV installation control stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Perceptual Drift contributors" }]
dependencies = [
    "python-osc==1.8.3",
    "pyserial==3.5",
    "PyYAML==6.0.2",
    "mido==1.3.2",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.1.1",
    "pytest==8.3.3",
]

[project.scripts]
pd-check-stack = "scripts.check_stack:main"
pd-operator-ui = "software.operator_ui.server:main"
pd-validate-config = "scripts.validate_config:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "software*"]

[tool.setuptools.package-data]
"software.operator_ui" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.black]
line-length = 79
